After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 605326 - wrong variable name in comments
wrong variable name in comments
Status: RESOLVED FIXED
Product: seahorse
Classification: Applications
Component: general
git master
Other Linux
: Normal trivial
: 2.26.0
Assigned To: Seahorse Maintainer
Seahorse Maintainer
Depends on:
Blocks:
 
 
Reported: 2009-12-23 18:42 UTC by nobled
Modified: 2010-02-16 17:15 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description nobled 2009-12-23 18:42:43 UTC
Really minor documentation error: In pgp/seahorse-gpgme-key-op.h, there are references to the constant "#RSA_MAX", which doesn't exist; it should read "#LENGTH_MAX".
Comment 1 Pablo Castellano (IRC: pablog) 2010-02-16 17:15:51 UTC
Fixed, thanks!

commit 511277254fbb1ab0bcb6fb9867e7404558f0225e
Author: Pablo Castellano <pablog@src.gnome.org>
Date:   Tue Feb 16 18:13:49 2010 +0100

    Fixed wrong variable names in comments
    
    Thanks to nobled for reporting:
    https://bugzilla.gnome.org/show_bug.cgi?id=605326