Fixed wrong variable names in comments

Thanks to nobled for reporting:
https://bugzilla.gnome.org/show_bug.cgi?id=605326